# ai_agent

./: README.md  pyproject.toml
app/: crud.py  db.py  main.py  models.py  pyproject.toml  schemas.py
app/api/: routes.py
app/core/: config.py
tests/: test_items_api.py
